infrastructure/k8s/old.posts.yaml
# Single POD

apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: itsaadarsh/microservices-posts:latest
      imagePullPolicy: Never
