infrastructure/k8s/comments-depl.yaml
# Deployment of COMMENTS (With one POD)

apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: itsaadarsh/microservices-comments:latest
          imagePullPolicy: Never
---
# CLUSTER IP service

apiVersion: v1
kind: Service
metadata:
  name: comments-ser
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
