infrastructure/k8s/event-bus-depl.yaml
# Deployment of EVENT BUS (With one POD)

apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: itsaadarsh/microservices-event-bus:latest
          imagePullPolicy: Never
---
# CLUSTER IP service

apiVersion: v1
kind: Service
metadata:
  name: event-bus-ser
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
